New commit: Changed text size for readability

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         }
         .copyright{
             font-size: 18px;
-            margin: 10px
+            margin: 10px;
         }
         ul{
             font-size: 20px;
@@ -46,7 +46,7 @@
     <h1 style="font-size:40px;">
         <span style="background-color: lightblue;">WHO AM I</span>
     </h1>
-    <p style="font-size:25px;">
+    <p style="font-size:20px;">
         <span>
             I'm Marco - I am a high school senior who has a lot of things that he likes to do! I would get more specific, but I want 
             you to find out more about me if you are interested by clicking through the navigation menu on the bottom of each page! 
