--- a/skills.html
+++ b/skills.html
@@ -29,18 +29,17 @@
         <source src="Videos/YT Video Demo.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
-    <p style="font-size:25px;">
+    <p style="font-size:20px;">
         <span>
-            <a href="https://www.youtube.com/watch?v=-opJjJMcCBw&ab_channel=Poity1">Youtube Link</a>
+            <a href="https://www.youtube.com/watch?v=-opJjJMcCBw&ab_channel=Poity1">Link to the Youtube Video Above</a>
         </span>
     </p>
-
     <h2 style="font-size:40px;">
         <span>
             1: Know Your Audience
         </span>
     </h2>
-    <p style="font-size:25px;">
+    <p style="font-size:20px;">
         <span>
             This is 100% the most important part! If you don't know your audience, you won't know how to appeal to them! If you want to make 
             a college acceptance reactions video and use it to get popular, then your audience will be mostly high school freshmen to seniors! 
@@ -54,7 +53,7 @@
             2: Create a Captivating Thumbnail
         </span>
     </h2>
-    <p style="font-size:25px;">
+    <p style="font-size:20px;">
         <span>
             The thumbnail is the first thing the consumer will see! You absolutely have to make it captivating, making use of what
             your audience is interested in! If you need a good thumbnail creator, you can use Canva! It's free, and has a lot of features!
@@ -71,13 +70,17 @@
         </li>
     </ul>
     <img src="Images/Colleges!.png" alt="College Thumbnail with Subtle Clickbait" width="480" height="270">     
-    <a href="https://canva.com/">Canva Thumbnail Creator Website!</a>
+    <p style="font-size:20px;">
+        <span>
+            <a href="https://canva.com/">Canva Thumbnail Creator Website!</a>
+        </span>
+    </p>
     <h2 style="font-size:40px;">
         <span>
             3: Play the Right Music
         </span>
     </h2>
-    <p style="font-size:25px;">
+    <p style="font-size:20px;">
         <span>
             Good background music is integral for increasing your watch time! You must know your audience to know what music to put 
             in the background. If you were a Roblox youtuber, you could consider putting non-copyright EDM songs. For college reaction 
@@ -89,9 +92,9 @@
         <source src="Audio/LOFI Music (KaizanBlu - Remember).mp3" type="audio/mp3">
         Your browser does not support the audio!
     </audio>
-    <p style="font-size:25px;">
+    <p style="font-size:20px;">
         <span>
-            Source: Music: Remember by KaizanBlu
+            Source: Remember by KaizanBlu
         </span>
     </p>
     <h2 style="font-size:40px;">
@@ -99,7 +102,7 @@
             4: Analyze Your Statistics!
         </span>
     </h2>
-    <p style="font-size:25px;">
+    <p style="font-size:20px;">
         <span>
             Statistics are extremely important! If you're making your first video, you don't have to worry about this. However, if you 
             have 1 or more videos uploaded, you can check out your analytics! By analyzing these, you can see how people found you, and 
@@ -108,7 +111,7 @@
         </span>
     </p>
     <img src="Images/Analytics YT.png" alt="YT Analytics showing -100 subscribers" width="480" height="270">    
-    <p style="font-size:25px;">
+    <p style="font-size:20px;">
         I have not uploaded in 2 years, so the analytics tell me that I should consider uploading if I want to achieve better audience 
         retention!
     </p>
@@ -117,14 +120,14 @@
             Conclusion
         </span>
     </h2>
-    <p style="font-size:25px;">
+    <p style="font-size:20px;">
         <span>
             Now you have the basic foundations for creating an effective Youtube video! You are free to choose how you apply these 
             skills in the future, as the tips I have given are mostly aspects that worked for me! It's up to you how your future
             Youtube career goes, and always remember - treat youtube like a hobby! It's a lot of fun!
         </span>
     </p>
-    <p style="font-size:25px;">
+    <p style="font-size:20px;">
         <span>
             Feel free to give me any youtubers you enjoy watching!
         </span>
