New Commit: Changed schools into hyperlinks

--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
             If you want, you can check out the table below that shows the schools I've attended! 
         </span>
     </p>
-    <a href="https://www.bths.edu/"> BTHS Website! This is my current school.</a>
     <table>
         <tr>
             <th>School Name</th>
@@ -61,20 +60,18 @@
             <th>Image</th>
         </tr>
         <tr>
-            <td>P.S.176 - The Ovington School</td>
+            <td><a href="https://www.ps176.org/"> P.S.176 - The Ovington School</a></td>
             <td>K-5</td>
             <td><img src="Images/PS176.png" alt="PS176" width="480" height="270"></td>
         </tr>
         <tr>
-            <td>I.S.187 - Christa McAuliffe School</td>
-            <td>5-8</td>
+            <td><a href="https://www.is187nyc.com/"> I.S.187 - The Christa McAuliffe School</a></td>
+            <td>6-8</td>
             <td><img src="Images/IS187.png" alt="IS187" width="480" height="270"> </td>
         </tr>
         <tr>
-            <td>
-                BTHS - Brooklyn Technical
-            </td>
-            <td>8-12</td>
+            <td><a href="https://www.bths.edu/"> BTHS - Brooklyn Technical High School</a></td>
+            <td>9-12</td>
             <td><img src="Images/BTHS.png" alt="BTHS" width="480" height="270"> </td>
         </tr>
     </table>
