--- a/skills.html
+++ b/skills.html
@@ -68,6 +68,9 @@
             Clickbait is okay, but don't do it to the point of it becoming unethical! You want to get views, but you don't
             want your viewer to leave the video within the first second! That will only hurt your video's chances of success!
         </li>
+        <li>
+            Be subtle. You want your viewer to blindly click on the video before considering the weight of their actions! 
+        </li>
     </ul>
     <img src="Images/Colleges!.png" alt="College Thumbnail with Subtle Clickbait" width="480" height="270">     
     <p style="font-size:20px;">
@@ -85,7 +88,8 @@
             Good background music is integral for increasing your watch time! You must know your audience to know what music to put 
             in the background. If you were a Roblox youtuber, you could consider putting non-copyright EDM songs. For college reaction 
             videos, you would usually want to use lofi or calm music, to lower the heartrate of your consumer. I've attatched an example
-            of a lofi song. Please properly credit the music you use in the description.
+            of a lofi song. Please properly credit the music you use in the description. Remember: If your viewer falls asleep while watching 
+            your video, it just means more watch time! 
         </span>
     </p>
     <audio controls>
@@ -112,8 +116,8 @@
     </p>
     <img src="Images/Analytics YT.png" alt="YT Analytics showing -100 subscribers" width="480" height="270">    
     <p style="font-size:20px;">
-        I have not uploaded in 2 years, so the analytics tell me that I should consider uploading if I want to achieve better audience 
-        retention!
+        This unexplainable phenomena of downward growth may seem daunting, but do not worry! I've encountered this because I haven't 
+        uploaded in 2 years!!! Please don't do what I did.
     </p>
     <h2 style="font-size:40px;">
         <span>
