--- a/favorites.html
+++ b/favorites.html
@@ -29,7 +29,7 @@
         <span>
             I love playing the alto saxophone! I've played it since 6th grade, and I still play it today. I always like instruments that work 
             well as solo-instruments, and I think the alto saxophone fits that very well! My skill level is far from advanced on the saxophone, 
-            but I'm still able to sight-read popular songs if I ever feel like it!
+            but I'm still able to sight-read popular songs if I ever feel like it! Careless Whisper is the only song I have memorized.
         </span>
     </p>
     <h2 style="font-size:40px;">
@@ -39,7 +39,8 @@
         <span>
             I love One Piece. I started it last summer. I reached episode 1000 in just 6 months after last summer ended. I really like the unique story
             that Eiichiro Oda created for One Piece, and I definitely love Luffy's rubber power. One Piece was what made physics class so much fun 
-            for me, because I could keep on comparing Luffy's attacks with the workings of physics!!!
+            for me, because I could keep on comparing Luffy's attacks with the workings of physics!!! Though, I'm now in AP Physics C: Mechanics
+            and I can no longer compare Luffy's attacks to physics without having to go into a lot of calculus numbers D:
         </span>
     </p>
     <img src="Images/Mizu No Luffy.png" alt="Water Luffy" width="480" height="270"> 
@@ -50,11 +51,13 @@
     <p style="font-size:20px;">
         <span>
             My form is not good and my balance is very off. However, I practice punching and kicking for fun, and use it more as 
-            a form of exercise rather than a formal skill. I'm the best martial artist in my dojo! (my dojo is the backyard and I 
-            am the only person in the backyard) Bruce Lee's kicking is my end goal, but I know I won't exactly reach that point. 
-            Self-learning martial arts is my 100% favorite exercise, even if I'm not good at it!!!!!
+            a form of exercise rather than a formal skill. I'm the second best martial artist in the backyard because my dad is better 
+            than me! Bruce Lee is my inspiration, and I know I won't ever reach his point. However, I'll keep practicing because it's 100% 
+            my favorite exercise! (The question-mark kick is my favorite kick!!)
         </span>
     </p>
+    <img src="GIFs\Bruce Lee Question Mark Kick.gif" alt="Bruce Lee Kick" width="580" height="370"> 
+    <p style="font-size:20px;">Bruce Lee performs a question-mark kick in The Way of The Dragon. (1974)</p>
     <h2 style="font-size:40px;">
         <span>ROBOTICS</span>
     </h2>
@@ -67,7 +70,8 @@
     </p>
     <img src="Images/Pill Counter Image.png" alt="Pill Counter" width="480" height="270"> 
     <p style="font-size:20px;">
-        My current progress - It's a mess right now but I've only just begun! Please don't judge I've never used Raspberry Pi before
+        My current progress - That big screen in the background is a 20 year-old Element TV! It displays the Raspbian OS very well
+        (I don't know how to program on the command line) :D 
     </p>
     <a href="https://www.raspberrypi.com/">Check out Raspberry Pi's official website!</a>
     <!-- This is the navigation menu to reach other pages -->
