New Commit: Fixed a typo of "Index.html"

--- a/skills.html
+++ b/skills.html
@@ -151,7 +151,7 @@
         <ul>
             <li><a href="favorites.html">Places I Think Are Nice in NYC!</a></li>
             <li><a href="spots.html">Look at my Interests!</a></li>
-            <li><a href="Index.html">Head Back to Main Page</a></li>   
+            <li><a href="index.html">Head Back to Main Page</a></li>   
         </ul>     
     </nav>   
     <span class="copyright">Copyright &copy; 2023 Marco Chen. All Rights Reserved.</span>
