New Commit: Added progress report for robotics

--- a/favorites.html
+++ b/favorites.html
@@ -73,6 +73,12 @@
         My current progress - That big screen in the background is a 20 year-old Element TV! It displays the Raspbian OS very well
         (I don't know how to program on the command line) :D 
     </p>
+    <img src="GIFs\Pill Counter Demo.gif" alt="Pill Counter Progress GIF" width="630" height="370">
+    <p style="font-size:20px;">
+        1 week later update: The extremely unsanitary pill counter can now accurately count with certain limitations! It has a very 
+        very basic Python GUI and I hope to finish the entire project soon! (Did you notice the final pill that fell out because of the
+        reverse rotation at the end? Don't worry, those pills weren't formally prescribed for anyone! :D)
+    </p>
     <a href="https://www.raspberrypi.com/">Check out Raspberry Pi's official website!</a>
     <!-- This is the navigation menu to reach other pages -->
     <nav>
