New Commit: Fixed typo

--- a/skills.html
+++ b/skills.html
@@ -149,8 +149,8 @@
     <!-- This is the navigation menu to reach other pages -->
     <nav>
         <ul>
-            <li><a href="favorites.html">Places I Think Are Nice in NYC!</a></li>
-            <li><a href="spots.html">Look at my Interests!</a></li>
+            <li><a href="spots.html">Places I Think Are Nice in NYC!</a></li>
+            <li><a href="favorites.html">Look at my Interests!</a></li>
             <li><a href="index.html">Head Back to Main Page</a></li>   
         </ul>     
     </nav>   
