New Commit: Added new update to pill counter

--- a/favorites.html
+++ b/favorites.html
@@ -73,12 +73,20 @@
         My current progress - That big screen in the background is a 20 year-old Element TV! It displays the Raspbian OS very well
         (I don't know how to program on the command line) :D 
     </p>
+    <hr class="dashed">
     <img src="GIFs\Pill Counter Demo.gif" alt="Pill Counter Progress GIF" width="630" height="370">
     <p style="font-size:20px;">
         1 week later update: The extremely unsanitary pill counter can now accurately count with certain limitations! It has a very 
         very basic Python GUI and I hope to finish the entire project soon! (Did you notice the final pill that fell out because of the
         reverse rotation at the end? Don't worry, those pills weren't formally prescribed for anyone! :D)
     </p>
+    <hr class="dashed">
+    <img src="GIFs\Pill Counter Demo 2.gif" alt="Pill Counter Progress GIF" width="630" height="370">
+    <p style="font-size:20px;">
+        2 week later update: I moved the sensor so it counts more accurately and I added a spiral filter! Though, it's still extremely 
+        unsanitary and those pills will never be prescribed again!!!
+    </p>
+    <hr class="dashed">
     <a href="https://www.raspberrypi.com/">Check out Raspberry Pi's official website!</a>
     <!-- This is the navigation menu to reach other pages -->
     <nav>
