--- a/skills.html
+++ b/skills.html
@@ -117,7 +117,7 @@
     <img src="Images/Analytics YT.png" alt="YT Analytics showing -100 subscribers" width="480" height="270">    
     <p style="font-size:20px;">
         This unexplainable phenomena of downward growth may seem daunting, but do not worry! I've encountered this because I haven't 
-        uploaded in 2 years!!! Please don't do what I did.
+        uploaded in 2 years!!! Please don't do what I did. please please please
     </p>
     <h2 style="font-size:40px;">
         <span>
